--- a/functions/package.json
+++ b/functions/package.json
@@ -1,25 +1,37 @@
 {
   "name": "functions",
+  "version": "1.0.0",
+  "description": "healthcare-server",
   "scripts": {
     "build": "tsc",
-    "build:watch": "tsc --watch",
-    "serve": "npm run build && firebase emulators:start --only functions",
-    "shell": "npm run build && firebase functions:shell",
-    "start": "npm run shell",
-    "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
+    "start": "tsc --watch",
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q lib/index.js\"",
+    "deploy": "firebase deploy --only functions"
   },
   "engines": {
     "node": "18"
   },
   "main": "lib/index.js",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.2",
     "firebase-admin": "^11.8.0",
-    "firebase-functions": "^4.3.1"
+    "firebase-functions": "^4.3.1",
+    "node": "^21.6.2",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "typescript": "^4.9.0",
-    "firebase-functions-test": "^3.1.0"
+    "@types/cors": "^2.8.17",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.11.19",
+    "@types/uuid": "^9.0.8",
+    "concurrently": "^8.2.2",
+    "firebase-functions-test": "^3.1.0",
+    "nodemon": "^3.0.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^4.9.0"
   },
   "private": true
 }
