feat: add create new patient treatment, get all patients, get treatment history

--- a/functions/package.json
+++ b/functions/package.json
@@ -4,7 +4,7 @@
   "description": "healthcare-server",
   "scripts": {
     "build": "tsc",
-    "start": "tsc --watch",
+    "start": "node --trace-deprecation lib/index.js",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q lib/index.js\"",
     "deploy": "firebase deploy --only functions"
   },
@@ -19,7 +19,8 @@
     "firebase-admin": "^11.8.0",
     "firebase-functions": "^4.3.1",
     "node": "^21.6.2",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "whatwg-url": "^14.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
