--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -1,15 +1,17 @@
 {
   "compilerOptions": {
+    "target": "ES2016",
     "module": "commonjs",
-    "noImplicitReturns": true,
-    "noUnusedLocals": true,
-    "outDir": "lib",
-    "sourceMap": true,
+    "rootDir": "./src",
+    "outDir": "./lib",
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "target": "es2017"
+    "strictNullChecks": true,
+    "skipLibCheck": true
   },
   "compileOnSave": true,
-  "include": [
-    "src"
-  ]
+  "lib": ["ES2016"],
+  "exclude": ["node_modules"],
+  "include": ["src/**/*"]
 }
