feat: add API documentation, add Front end React JS template

--- a/firebase.json
+++ b/firebase.json
@@ -19,11 +19,20 @@
     }
   ],
   "hosting": {
-    "public": "public",
+    "public": "hosting",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
+    ],
+    "predeploy": [
+      "npm --prefix \"$RESOURCE_DIR\" run build"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
     ]
   }
 }
