--- a/functions/package.json
+++ b/functions/package.json
@@ -4,14 +4,14 @@
   "description": "healthcare-server",
   "scripts": {
     "build": "tsc",
-    "start": "node --trace-deprecation lib/index.js",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q lib/index.js\"",
+    "start": "node --trace-deprecation dist/index.js",
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
     "deploy": "firebase deploy --only functions"
   },
   "engines": {
     "node": "18"
   },
-  "main": "lib/index.js",
+  "main": "dist/index.js",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
