--- a/hosting/package.json
+++ b/hosting/package.json
@@ -12,10 +12,17 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@mui/lab": "^5.0.0-alpha.165",
     "@mui/material": "^5.15.10",
+    "@mui/styled-engine": "^5.15.11",
     "@mui/x-data-grid": "^6.19.4",
+    "@mui/x-date-pickers": "^6.19.5",
+    "@types/date-fns": "^2.6.0",
+    "date-fns": "^2.30.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-number-format": "^5.3.1",
+    "sass": "^1.71.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
