--- a/hosting/package.json
+++ b/hosting/package.json
@@ -15,7 +15,8 @@
     "@mui/lab": "^5.0.0-alpha.165",
     "@mui/material": "^5.15.10",
     "@mui/styled-engine": "^5.15.11",
-    "@mui/x-data-grid": "^6.19.4",
+    "@mui/x-data-grid": "^6.19.5",
+    "@mui/x-data-grid-generator": "^6.19.5",
     "@mui/x-date-pickers": "^6.19.5",
     "@types/date-fns": "^2.6.0",
     "date-fns": "^2.30.0",
