--- a/functions/package.json
+++ b/functions/package.json
@@ -19,6 +19,8 @@
     "firebase-admin": "^11.8.0",
     "firebase-functions": "^4.3.1",
     "node": "^21.6.2",
+    "react-dark-mode-toggle": "^0.2.0",
+    "react-toggle-dark-mode": "^1.1.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
