--- a/hosting/package.json
+++ b/hosting/package.json
@@ -20,6 +20,7 @@
     "@mui/x-date-pickers": "^6.19.5",
     "@types/date-fns": "^2.6.0",
     "date-fns": "^2.30.0",
+    "dotenv": "^16.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-number-format": "^5.3.1",
