--- a/hosting/package.json
+++ b/hosting/package.json
@@ -24,6 +24,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-number-format": "^5.3.1",
+    "react-toastify": "^10.0.4",
     "react-toggle-dark-mode": "^1.1.1",
     "sass": "^1.71.1"
   },
